Fix copying ('cept on Safari, lol)

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -61,3 +61,7 @@ body {
 * {
   box-sizing: border-box;
 }
+
+#hidden-copy-element {
+  margin-left: -9999px;
+}
